examples/typechecking/given_constraint_error.an

implicit print_impl {DoesNotExist a}: Print a =
    Print fn _ -> ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// implicit (print_impl: fn {(error) a} -> Print a) {(_: (error) a)} : Print a =
//     (Print: fn (fn a -> Unit) -> Print a) (fn (_: a) -> ())

// expected stderr:
// examples/typechecking/given_constraint_error.an:2:22
// 2 | implicit print_impl {DoesNotExist a}: Print a =	// error: `DoesNotExist` not found in scope
//   |                      ^^^^^^^^^^^^
// 3 |     Print fn _ -> ()
// 
// Found 1 error and 0 warnings

